[package]
name = "mvdparser"
description = "Extract information from QuakeWorld MVD demos."
categories = ["parsing"]
keywords = ["demos", "mvd", "parser", "quake", "quakeworld"]
repository = "https://github.com/vikpe/mvdparser"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
include = [
    "/benches/**",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
