[package]
name = "mvdparser"
description = "Extract information from QuakeWorld MVD demos."
categories = ["parsing"]
keywords = ["demos", "mvd", "parser", "quake", "quakeworld"]
repository = "https://github.com/vikpe/mvdparser"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.13.1"
edition = "2021"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/benches/**",
    "/src/**",
    "/tests/files/*.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bstr = "1.9.1"
chrono = { version = "0.4.38", default-features = false }
ktxstats = "0.3.1"
quake_clientinfo = "0.3.0"
quake_serverinfo = "0.4.0"
quake_text = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
pretty_assertions = "1.4.0"

[[bench]]
name = "bench_lib"
harness = false
